crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__mermaid_dotted_table_name.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "graph_mermaid(&[report])"
---
flowchart LR
  subgraph sg0["orders"]
    n0_0["id"]
  end
  subgraph sg1["raw.orders"]
    n1_0["id"]
  end

  n1_0 -->|"direct"|n0_0
