crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__mermaid_id_collision_avoided.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "graph_mermaid(&[report])"
---
flowchart LR
  subgraph sg0["raw.orders"]
    n0_0["id"]
  end
  subgraph sg1["raw_orders"]
    n1_0["id"]
  end

  n0_0 -->|"direct"|n1_0
