crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__plain_model_path_non_direct_annotation.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "graph_plain(&[report])"
---
mart (1/1 columns traced)
  area  →  raw.postcode → stg_app.area [expression] (direct)
