crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__plain_no_sources.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "graph_plain(&[report])"
---
orders (0/1 columns traced)
  id  (no sources)
