crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__plain_single_model.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "graph_plain(&[report])"
---
orders (2/2 columns traced)
  order_id  →  stg_orders.order_id (direct)
  total     →  stg_orders.price (expression)
